[gd_scene load_steps=2 format=3 uid="uid://c8v8o5wcwdn0"]

[ext_resource type="Script" uid="uid://bgp7clgn16cxg" path="res://scripts/menu/lobby_menu.gd" id="1_x0y8v"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x0y8v")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "LOBBY"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Connecting..."
horizontal_alignment = 1

[node name="LobbyStateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "State: Lobby"
horizontal_alignment = 1

[node name="PlayerListScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayerListScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ChangeNameBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Change Name"

[node name="ReadyBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Ready"

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Start Game"

[node name="LeaveBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Leave"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ChangeNameBtn" to="." method="_on_change_name_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ReadyBtn" to="." method="_on_ready_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeaveBtn" to="." method="_on_leave_btn_pressed"]
